--- a/templates/K-Means.html
+++ b/templates/K-Means.html
@@ -37,21 +37,7 @@
 
 </head>
 
-<style>
-   .box::-webkit-scrollbar {
-    width: 15px;
-    border-radius: 25px;
-    overflow: auto;
-}
 
-.box::-webkit-scrollbar-thumb {
-    border-radius: 25px;
-    background-color: #b3b3b3;
-    height: 20px;
-    width: 18px;
-   
-}
-</style>
 
 
 
@@ -73,14 +59,13 @@
     <div style=" padding:2px; margin-top: 120px; margin-left:40%;">
         <a style=" color:#222222; text-decoration: none; " href="#sectionId">Jump To Prediction</a>
     </div>
-
-    <div class="box" style="margin-left:12%; width: 70%; margin-right:12%; margin-bottom:30px; overflow-x:hidden; overflow-y: scroll; padding-right:20px; ">
-        <div class="component-element" style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:4px; ">
+    <div style="margin-left:12%; width: 70%; margin-right:12%; margin-bottom:30px; ">
+        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:4px; ">
             K-Means Clustering is an Unsupervised Machine Learning algorithm, which groups the unlabeled dataset into different clusters. K-means is a centroid-based algorithm or a distance-based algorithm, where we calculate the distances to assign a point to a
             cluster. In K-Means, each cluster is associated with a centroid.</p>
         </div>
 
-        
+
         <div style=" margin-top: 30px; margin-left: 20px; border-radius:10px; text-align:center; text-decoration: none; background-color:#bbbb; padding:4px;">
             <a href="{{url_for('datadisp')}}">CLICK HERE TO VIEW THE DATA SET</a>
         </div>
@@ -190,87 +175,37 @@ fill="#000000" stroke="none">
 
     <div style="clear:both; ">
     </div>
-    <!---This is for prediction-->
-    <div class="predictions">
+
+    <div class="predictions" style="margin-bottom: 60px;">
         <nav id="sectionId" class="prediction">
-            <label class="log" href="#"> PREDICTION:</label>
+            <label class="log" href="#"> Clustering Analysis:</label>
         </nav>
 
-        <form action="{{url_for('KMeansclu')}}" method="post">
-            <div class="selects" style="display:inline-block; margin-top: 25px; margin-left:100px; display:flex; justify-content: center; align-items: center;" col-md-4>
+        <form action="{{url_for('KMeansanalysis')}}" method="post">
+            <div class="selects" style="display:inline-block; margin-top: 25px; margin-left:25px; display:flex; justify-content: center; align-items: center;" col-md-4>
                 <div class="for-select" style="margin-left:30px;">
-                    <label for="state_input">State:</label>
-                    <select id="state_input" name="state_input"></select>
+                    <label for="state_input1">State:</label>
+                    <select id="state_input1" name="state_input"></select>
                 </div>
                 <div class="for-select">
-                    <label for="district_input">District:</label>
-                    <select name="district_input" id="district_input">
+                    <label for="district_input1">District:</label>
+                    <select name="district_input" id="district_input1">
                 <option disabled selected> Select District</option>
             </select>
                 </div>
                 <script language="javascript">
-                    populateStates("state_input", "district_input");
-                </script>
-                <div class="for-select">
-                    <label for="year-input">Year:</label>
-                    <select name="year" id="year-input" style=" padding :10px 0px;">
-                <option disabled selected> Select Year </option>
-            </select>
-                </div>
-                <script>
-                    Addyears("year-input");
+                    populateStates("state_input1", "district_input1");
+                    document.getElementById("state_input1").option = 'select state';
                 </script>
             </div>
-
-            <div class="input-container;" style="align-items:center; display:flex; flex-wrap:wrap; justify-content: center; height:100%">
-                <div class="form-input">
-                    <label for="murder-input">MURDER:</label>
-                    <input type="number" name="Murder" id="murder-input" value="Default value"></input>
-                </div>
-                <div class="form-input">
-                    <label for="attemp-to-murder-input">ATTEMPT TO MURDER:</label>
-                    <input type="number" name="Attempt To Murder" id="attemp-to-murder-input" value="Default value"></input>
-                </div>
-                <div class="form-input">
-                    <label for="rape-input">RAPE:</label>
-                    <input type="number" name="Rape" id="rape-input" value="Default value"></input>
-                </div>
-                <div class="form-input">
-                    <label for="kidnapping-and-abduction">KIDNAPPING & ABDUCTION:</label>
-                    <input type="number" name="Kidnapping and abduction" id="kidnapping-and-abduction" value="Default value"></input>
-                </div>
-                <div class="form-input">
-                    <label for="dacoity-input">DACOITY:</label>
-                    <input type="number" name="dacoity" id="dacoity-input" value="Default value"></input>
-                </div>
-                <div class="form-input">
-                    <label for="robbery-input">ROBBERY:</label>
-                    <input type="number" name="Robbery" id="robbery-input" value="Default value"></input>
-                </div>
-                <div class="form-input">
-                    <label for="theft-input">THEFT:</label>
-                    <input type="number" name="theft-input" id="theft-input" value="Default value"></input>
-                </div>
-                <div class="form-input">
-                    <label for="hurt/grevious-hurt-input">HURT/GREVIOUS HURT:</label>
-                    <input type="number" name="Hurt/Grevious-Hurt" id="hurt/grevious-hurt-input" value="Default value"></input>
-                </div>
+            <div style="margin-left:40%; margin-top: 25px; margin-bottom: 60px; ">
+                <label for="prediction-output">Cluster Prediction : </label>
+                <p>{{ prediction_text0 }} </p>
             </div>
 
-
-            <button class="button" style="margin-left:50%; margin-top: 2%;" onclick="document.getElementById('prediction-input').style.display='block'">Submit</button>
-
+            <button class="button" style="margin-left:50%; margin-top: 2%;" onclick="document.getElementById('prediction-output').style.display='block'">Submit</button>
 
         </form>
-        <br>
-
-        <div style="margin-left:40%; margin-top: 25px; margin-bottom: 60px; ">
-            <label for="prediction-input">Prediction:</label>
-            <p>{{ prediction_text }} </p>
-        </div>
-    </div>
-    </section>
-
     </div>
     <footer>
         <p> Copyright &copy; 2023. All rights reserved.</p>
