--- a/templates/K-Means.html
+++ b/templates/K-Means.html
@@ -15,6 +15,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script src="{{url_for('static',filename='javascript/linearregression.js')}}"></script>
 
+
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script>
     <script src="http://www.skulpt.org/js/skulpt.min.js" type="text/javascript"></script>
     <script src="http://www.skulpt.org/js/skulpt-stdlib.js" type="text/javascript"></script>
@@ -33,6 +35,7 @@
 
 
     <script src="https://cdn.lordicon.com/libs/frhvbuzj/lord-icon-2.0.2.js"></script>
+
 
 
 </head>
@@ -199,9 +202,13 @@ fill="#000000" stroke="none">
                 </script>
             </div>
             <div style="margin-left:40%; margin-top: 25px; margin-bottom: 60px; ">
-                <label for="prediction-output">Cluster Prediction : </label>
-                <p>{{ prediction_text0 }} </p>
+                <label for="prediction-output">Cluster Prediction :
+                <p id="cluster-text" class="cluster-text" style="font-size: 50px; margin-left:5%;"><b>{{ prediction_text0 }}</p> </span></label>
+
             </div>
+            <script>
+                changecolor()
+            </script>
 
             <button class="button" style="margin-left:50%; margin-top: 2%;" onclick="document.getElementById('prediction-output').style.display='block'">Submit</button>
 
@@ -211,7 +218,6 @@ fill="#000000" stroke="none">
         <p> Copyright &copy; 2023. All rights reserved.</p>
 
     </footer>
-
 </body>
 
 </html>
