--- a/templates/linear-regression.html
+++ b/templates/linear-regression.html
@@ -113,29 +113,29 @@
         </nav>
 
         <form action="{{url_for('linearreg')}}" method="post">
-            <h2 style="margin:auto; width:20%; margin-top:20px; margin-bottom:20px;"> Enter the Following Details</h2>
-            <div class="input-container;" style="align-items:center; display:flex; flex-wrap:wrap; justify-content: center; height:100%">
-                <div class="form-input">
-                    <label for="murder-input">UMEMPLOYEMENT-RATE(%):</label>
-                    <input type="number" name="Murder" id="percentage-input" min="0" max="100" step="0.01" value="Default value"></input>
-                </div>
-                <div class="form-input">
-                    <label for="attemp-to-murder-input">POPULATION(IN CR.):</label>
-                    <input type="number" name="Attempt To Murder" id="attemp-to-murder-input" min="0" value="Default value"></input>
-                </div>
-                <div class="form-input">
-                    <label for="rape-input">LITERACY RATE:</label>
-                    <input type="number" name="Rape" id="rape-input" min="0" value="Default value"></input>
-                </div>
-                <div class="form-input">
-                    <label for="kidnapping-and-abduction">GDP(PER CAPITA):</label>
-                    <input type="number" name="Kidnapping and abduction" min="0" id="kidnapping-and-abduction" value="Default value"></input>
-                </div>
-            </div>
 
-
-            <button class="button" style="margin-left:50%; margin-top: 2%;" onclick="document.getElementById('prediction-input').style.display='block'">Submit</button>
-
+                <div class="selects" style="display:inline-block; margin-top: 25px; margin-left:100px; display:flex; justify-content: center; align-items: center;" col-md-4>
+                    <div class="for-select" style="margin-left:30px;">
+                        <label for="state_input">State:</label>
+                        <select id="state_input" name="state_input"></select>
+                    </div>
+                   
+                    <script language="javascript">
+                        populatestates("state_input");
+                    </script>
+                    <div class="for-select">
+                        <label for="year-input">Year:</label>
+                        <select name="year" id="year-input" style=" padding :10px 0px;">
+                    <option disabled selected> Select Year </option>
+                </select>
+                    </div>
+                    <script>
+                        Addyears("year-input");
+                    </script>
+                </div>
+    
+    
+                <button class="button" style="margin-left:50%; margin-top: 2%;" onclick="document.getElementById('prediction-input').style.display='block'">Submit</button>
 
         </form>
         <br>
