changes to the crime feed and design changes to html pages

--- a/templates/K-Means.html
+++ b/templates/K-Means.html
@@ -84,7 +84,7 @@
                 </script>
             </div>
             <div style="margin-left:40%; margin-top: 25px; margin-bottom: 30px; ">
-                <label for="cluster-text">Cluster Prediction :
+                <label for="cluster-text"><b>CLUSTER:</b> :
                 <p id="cluster-text" class="cluster-text" style="font-size: 50px;"><b>{{ prediction_text0 }}</p> </span></label>
 
             </div>
