--- a/templates/RandomForestClassifer.html
+++ b/templates/RandomForestClassifer.html
@@ -54,55 +54,16 @@
 
     </nav>
     <div style=" padding:2px; margin-top: 120px; margin-left:40%;">
-        <a style=" color:#222222; text-decoration: none; " href="#sectionId">Jump To Prediction</a>
-    </div>
-
-    <div style="margin-left:12%; width: 70%; margin-right:12%; margin-bottom:30px; ">
-        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:4px; ">
-            Random Forest is a popular machine learning algorithm that belongs to the supervised learning technique.It is based on the concept of ensemble learning, which is a process of combining multiple classifiers to solve a complex problem and to improve the
-            performance of the model.</p>
-        </div>
-        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:4px; ">
-            Random Forest is a classifier that contains a number of decision trees on various subsets of the given dataset and takes the average to improve the predictive accuracy of that dataset.</p>
-        </div>
-        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:4px; ">
-            Here we have used cluster labels from K-prototype clustering as pseudo labels for the unlabelled dataset for classification.</p>
-        </div>
-
-
-        <div style=" margin-top: 30px; margin-left: 20px; border-radius:10px; text-align:center; text-decoration: none; background-color:#bbbb; padding:4px;">
-            <a href="{{url_for('datadisp')}}">CLICK HERE TO VIEW THE DATA SET</a>
-        </div>
-
-        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:4px; align-items: center; display: flex; justify-content: center;  flex-direction: column;">
-            <p> <b> Test Size = 0.2</b></p>
-            <p> <b> Accuracy = 99.3604651163%</b></p>
-
-        </div>
-        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:4px; ">
-            <p> <b> Classification Report:</b></p>
-        </div>
-
-        <div style="display: flex;
-        justify-content: center;
-        align-items: center;
-"> <img src="{{url_for('static',filename='images/classification_report.png')}}" style=" margin-left: 30px;margin-top: 20px; border-radius:10px; height: 200px; width:500px;border: 1px solid black;"></div>
-
-
 
     </div>
-    <div style="clear:both;">
+    <div style="display: flex; margin-top: 40px; justify-content: center;">
+        <p style="padding: 8px; background-color: #bbbb; border-radius: 10px; border: 1px solid black;"><b>Enter the Following Details:</b></p>
     </div>
-    <!---This is for prediction-->
     <div class="predictions">
-        <nav id="sectionId" class="prediction">
-            <label class="log" href="#"> PREDICTION:</label>
-        </nav>
-
         <form action="{{url_for('randomfrstcls')}}" method="post">
-            <div class="selects" style="display:inline-block; margin-top: 25px; margin-left:100px; display:flex; justify-content: center; align-items: center;" col-md-4>
+            <div class="selects" style=" margin-top: 50px; display:flex; justify-content: center;" col-md-4>
                 <div class="for-select" style="margin-left:30px;">
-                    <label for="state_input">State:</label>
+                    <label style="margin-left: 0;" for="state_input">State:</label>
                     <select id="state_input" name="state_input"></select>
                 </div>
                 <div class="for-select">
@@ -126,17 +87,41 @@
             </div>
 
 
-            <button class="button" style="margin-left:50%; margin-top: 2%;" onclick="document.getElementById('prediction-input').style.display='block'">Submit</button>
+            <button class="button" style="margin-left:45%; margin-top: 6%;" onclick="document.getElementById('prediction-input').style.display='block'">Submit</button>
 
 
         </form>
         <br>
 
-        <div style="margin-left:40%; margin-top: 25px; margin-bottom: 60px; ">
-            <label for="prediction-input">Prediction:</label>
+        <div style=" display: flex; justify-content: center; margin-top: 25px; margin-bottom: 60px; ">
+            <label for="prediction-input"><b>PREDICTION:</b></label>
             <p>{{ prediction_text }} </p>
         </div>
     </div>
+
+    <div style="margin-left:12%; width: 70%; margin-right:12%; margin-bottom:30px; ">
+
+
+        <div style=" margin-top: 30px; margin-left: 20px; border-radius:10px; text-align:center; text-decoration: none; background-color:#bbbb; padding:4px;">
+            <a href="{{url_for('datadisp')}}">CLICK HERE TO VIEW THE DATA SET</a>
+        </div>
+
+        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:4px; ">
+            <p> <b> Classification Report:</b></p>
+        </div>
+
+        <div style="display: flex;
+        justify-content: center;
+        align-items: center;
+"> <img src="{{url_for('static',filename='images/classification_report.png')}}" style=" margin-left: 30px;margin-top: 20px; border-radius:10px; height: 200px; width:500px;border: 1px solid black;"></div>
+
+
+
+    </div>
+    <div style="clear:both;">
+    </div>
+    <!---This is for prediction-->
+
     </section>
 
     </div>
