--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <nav class="main">
-        <label class="logo" href="{{url_for('index')}}">Crime Hotspots Prediction & Analysis</label>
+        <label class="logo" href="{{url_for('index')}}">CRIME ANALYSIS</label>
         <ul>
             <li>
                 <a href="{{url_for('index')}}">Home</a>
