--- a/templates/crimefeed.html
+++ b/templates/crimefeed.html
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div class="box" style="margin-left: 50px; width: 90%;margin-top: 40px; overflow: hidden; ">
-        <iframe src="{{url_for('heatmap1')}}" style=" width: 100% ;height:100% ;"></iframe>
+        <iframe src="{{url_for('foliummap')}}" style=" width: 100% ;height:100% ;"></iframe>
     </div>
 
     <footer>
