--- a/templates/Analysis.html
+++ b/templates/Analysis.html
@@ -105,7 +105,7 @@
 
 <body>
     <nav class="main">
-        <a href="{{url_for('index')}}"><label style="margin-left:0;"class="logo">Crime Hotspots Prediction & Analysis</label></a>
+        <a href="{{url_for('index')}}"><label style="margin-left:0;"class="logo">Crime Analysis</label></a>
         <ul>
             <li><a href="{{url_for('index')}}">Home</a></li>
             <li><a href="#">About</a></li>
