--- a/templates/K-Means.html
+++ b/templates/K-Means.html
@@ -46,7 +46,7 @@
 
 <body>
     <nav class="main" style="width: 100%;">
-        <a href="{{url_for('index')}}"><label style="margin-left:0;"class="logo">Crime Hotspots Prediction & Analysis</label></a>
+        <a href="{{url_for('index')}}"><label style="margin-left:0;"class="logo">Crime Analysis</label></a>
         <ul>
             <li><a href="{{url_for('index')}}">Home</a></li>
             <li><a href="#">About</a></li>
