--- a/templates/RandomForestClassifer.html
+++ b/templates/RandomForestClassifer.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{{url_for('static',filename='stylesheets/K-means.css')}}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script src="{{url_for('static',filename='javascript/linearregression.js')}}"></script>
+    <script src="{{url_for('static',filename='javascript/random-forest-classifier.js')}}"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script>
     <script src="http://www.skulpt.org/js/skulpt.min.js" type="text/javascript"></script>
     <script src="http://www.skulpt.org/js/skulpt-stdlib.js" type="text/javascript"></script>
@@ -41,7 +42,7 @@
 
 <body onload="tablefilling(1);">
     <nav class="main" style="width: 100%;">
-        <a href="{{url_for('index')}}"><label style="margin-left:0;"class="logo">Crime Hotspots Prediction & Analysis</label></a>
+        <a href="{{url_for('index')}}"><label style="margin-left:0;"class="logo">Crime Analysis</label></a>
         <ul>
             <li><a href="{{url_for('index')}}">Home</a></li>
             <li><a href="#">About</a></li>
@@ -90,13 +91,17 @@
             <button class="button" style="margin-left:45%; margin-top: 6%;" onclick="document.getElementById('prediction-input').style.display='block'">Submit</button>
 
 
-        </form>
-        <br>
 
-        <div style=" display: flex; justify-content: center; margin-top: 25px; margin-bottom: 60px; ">
-            <label for="prediction-input"><b>PREDICTION:</b></label>
-            <p>{{ prediction_text }} </p>
-        </div>
+            <br>
+            <div style=" margin-left:30%; margin-top: 25px; margin-bottom: 60px; ">
+                <label for="prediction-input"><b>PREDICTION:</b></label>
+                <p id="prediction-text" class="prediction-text">{{ prediction_text }} </p>
+            </div>
+            <script>
+                ChangeLabel();
+            </script>
+        </form>
+
     </div>
 
     <div style="margin-left:12%; width: 70%; margin-right:12%; margin-bottom:30px; ">
