--- a/templates/datadisplay.html
+++ b/templates/datadisplay.html
@@ -26,7 +26,7 @@
 
 <body onload="linearr()">
     <nav class="main">
-        <a href="{{url_for('index')}}"><label style="margin-left:0;"class="logo">Crime Hotspots Prediction & Analysis</label></a>
+        <a href="{{url_for('index')}}"><label style="margin-left:0;"class="logo">Crime Analysis</label></a>
         <ul>
 
             <li><a href="{{url_for('index')}}">Home</a></li>
@@ -36,7 +36,7 @@
         </ul>
     </nav>
 
-    <div class="toggle-button" style="margin-top:100px; display: inline-block; margin-bttom:30px;">
+    <div class="toggle-button" style="margin-top:100px; display: inline-block; margin-bottom:30px;">
         <button class="button" onclick="kmeans()">K-Means</button>
         <button class="button" onclick="linearr()">Linear Regression</button>
         <button class="button" onclick="classification()">Classification</button>
