--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
             <div class="flex flex-wrap">
                 <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
                     <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Clustering</h2>
-                    <p class="leading-relaxed text-base mb-4">Clustering Analysis and Prediction using different Algorithms.</p>
+                    <p class="leading-relaxed text-base mb-4">Clustering Analysis of various States, Distrcits & Union Territories across India.</p>
                     <div class="drop-down">
                         <button class=button><a class="text-blue-500 inline-flex items-center">Try Now
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
@@ -54,7 +54,7 @@
                 </div>
                 <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
                     <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Classification</h2>
-                    <p class="leading-relaxed text-base mb-4">Classification of Districts into different crime intensity regions.</p>
+                    <p class="leading-relaxed text-base mb-4">Projection & Classification of Districts into different crime intensity regions.</p>
                     <div class="drop-down">
                         <button class=button><a class="text-blue-500 inline-flex items-center">Try Now
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
@@ -70,7 +70,7 @@
                 </div>
                 <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
                     <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Linear Regression</h2>
-                    <p class="leading-relaxed text-base mb-4">Crime Rate Prediction based on Socio-Economic factors using MLR.</p>
+                    <p class="leading-relaxed text-base mb-4">Crime Rate Prediction based on Population Projection using Linear Regression</p>
                     <a href="{{url_for('LinearReg')}}"><button class="button" class="text-blue-500 inline-flex items-center">Try Now  
                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                  <path d="M5 12h14M12 5l7 7-7 7"></path></svg>
