--- a/templates/time-series-forcasting.html
+++ b/templates/time-series-forcasting.html
@@ -40,7 +40,7 @@
 
 <body onload="tablefilling(1); ">
     <nav class="main " style="width: 100%; ">
-        <a href="{{url_for('index')}}"><label style="margin-left:0;"class="logo">Crime Analysis</label></a>
+        <a href="{{url_for('index')}}"><label style="margin-left:0;"class="logo">CRIME ANALYSIS</label></a>
         <ul>
             <li><a href="{{url_for('index')}}">Home</a></li>
             <li><a href="#">About</a></li>
@@ -53,37 +53,50 @@
 
     </nav>
     <div style=" padding:2px; margin-top: 120px; margin-left:40%;">
-        <a style=" color:#222222; text-decoration: none; " href="#sectionId">Jump To Prediction</a>
+
     </div>
 
     <div style="margin-left:12%; width: 70%; margin-right:12%; margin-bottom:30px; ">
 
-        <div style=" margin-top: 30px; margin-left: 20px; border-radius:10px; text-align:center; text-decoration: none; background-color:#bbbb; padding:4px;">
+        <div>
+            <p style=" margin-top: 2%; height: 30px; text-align: center; padding: 5px; background-color: #bbbb; border-radius: 10px;"><b>FORE-CAST:</b></p>
+            <div class="box" style="overflow:hidden; width: 900px; margin:auto; margin-top :30px;">
+                <iframe class="iframe1" style=" overflow: hidden; height: 100%; width: 100%;" src="{{url_for('static',filename='images/forecast.html')}}"></iframe>
+            </div>
+            <p style="margin-top: 2%; height: 30px; text-align: center; padding: 5px; background-color: #bbbb; border-radius: 10px;"><b>FORE-CAST CMP:</b></p>
+            <div class="box" style="overflow:hidden; height:400px; width: 900px; margin:auto; margin-top :30px;">
+                <iframe class="iframe1" style=" overflow:hidden; height: 100%; width: 100%;" src="{{url_for('static',filename='images/forecast_cmp.html')}}"></iframe>
+            </div>
+        </div>
+        <div style='margin-left:12%; width: 70%; margin-right:12%; margin-bottom:30px;margin-top:30px; background-color:#bbbb; font-family:monsterrat; border:1px solid black; border-radius:10px; padding:5px'>FUTURE CRIMES ESTIMATED USING <b>EXPONENTIAL SMOOTHING</b>.</div>
+
+
+        <div style=" margin-top: 30px; margin-left: 20px; border-radius:10px; text-align:center; text-decoration: none; background-color:#bbbb; padding:6px;">
             <a href="{{url_for('datadisp')}}">CLICK HERE TO VIEW THE DATA SET</a>
         </div>
-
-        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:4px; ">
+        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:6px;">
             Timeseries forecasting in simple words means to forecast or to predict the future value(eg-stock price) over a period of time.</p>
         </div>
 
-        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:4px;">
+        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:6px;">
             <p><b>There are some key concepts associated with time series forecasting :</b></p>
             <br>
             <br>
-            <li><b>Seasonality:</b> In simple terms, Seasonality means repetition over time. For example, while predicting electricity bills will be higher every year in the summer season.
-            </li>
-            <br>
-            <li style="text-align: left;"><b>Trend :</b> It tells increasing or decreasing trends over time in the data.</li>
-
+            <ul>
+                <li style="text-align: left;"><b>Seasonality:</b>In simple terms, Seasonality means repetition over time. For example, while predicting electricity bills will be higher every year in the summer season.
+                </li>
+                <br>
+                <li style="text-align: left;"><b>Trend :</b> It tells increasing or decreasing trends over time in the data.</li>
+            </ul>
         </div>
-        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:4px; ">
+        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:6px; ">
             Fb Prophet library was launched by Facebook now meta, and it was built for time series analysis. It can automatically manage parameters related to seasonality and data stationarity.</p>
         </div>
 
-        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:4px; ">
+        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:6px; ; ">
             Here we are using fbprophet library to predict crime rate of India for the next 5 years : 2022, 2023, 2024, 2025 & 2026.
         </div>
-        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:4px; ">
+        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:6px; ">
             Accuracy = 88.85251460155811%
             </p>
         </div>
@@ -93,21 +106,7 @@
     <div style="clear:both;">
     </div>
     <!---This is for prediction-->
-    <div class="predictions">
-        <nav id="sectionId" class="prediction">
-            <label class="log" href="#"> PREDICTION:</label>
-        </nav>
-        <div>
-            <p style="margin-left:10%; margin-top: 2%; height: 30px; "><b>FORE-CAST:</b></p>
-            <div class="box" style="overflow:hidden; width: 900px; margin:auto; margin-top :30px;">
-                <iframe class="iframe1" style=" overflow:hidden; height: 100%; width: 100%;" src="{{url_for('static',filename='images/forecast.html')}}"></iframe>
-            </div>
-            <p style="margin-left:10%; margin-top: 7%; height: 30px; "><b>FORE-CAST CMP:</b></p>
-            <div class="box" style="overflow:hidden; width: 900px; margin:auto; margin-top :30px;">
-                <iframe class="iframe1" style=" overflow:hidden; height: 100%; width: 100%;" src="{{url_for('static',filename='images/forecast_cmp.html')}}"></iframe>
-            </div>
-        </div>
-    </div>
+
     </section>
 
     </div>
