--- a/templates/crimefeed.html
+++ b/templates/crimefeed.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav class="main">
-        <a href="{{url_for('index')}}"><label style="margin-left:0;"class="logo">Crime Analysis</label></a>
+        <a href="{{url_for('index')}}"><label style="margin-left:0;"class="logo">CRIME ANALYSIS</label></a>
         <ul>
             <li><a href="{{url_for('index')}}">Home</a></li>
             <li><a href="#">About</a></li>
@@ -36,6 +36,9 @@
             Web Scrapping model collects the crime data from News Websites(India Today) and after tracing out the location, coordinates are fetched using Nominatim API and used to plot the Heat Map using folium library, depicting the crime intesity on the basis of
             Geogrpahical Location.</p>
         </div>
+    </div>
+    <div style="display:flex; justify-content: center; ">
+        <button class="button">REFRESH</button>
     </div>
     <div class="box" style="margin-left: 50px; width: 90%;margin-top: 40px; overflow: hidden; ">
         <iframe src="{{url_for('foliummap')}}" style=" width: 100% ;height:100% ;"></iframe>
